@@ -276,20 +276,7 @@ CGraphicsPath* CDrawContext::createRoundRectGraphicsPath (const CRect& size, CCo
 	CGraphicsPath* path = createGraphicsPath ();
 	if (path)
 	{
-		CRect rect2 (size);
-		rect2.normalize ();
-		const CCoord X = rect2.left;
-		const CCoord X3 = rect2.right; 
-		const CCoord X2 = X3 - radius;
-		const CCoord Y = rect2.top;
-		const CCoord Y3 = rect2.bottom; 
-		const CCoord Y2 = Y3 - radius;
-		const CPoint arcsize (radius, radius);
-		path->addArc (CRect (CPoint (X2, Y), arcsize), 270., 360., false);
-		path->addArc (CRect (CPoint (X2, Y2), arcsize), 0., 90., false);
-		path->addArc (CRect (CPoint (X, Y2), arcsize), 90., 180., false);
-		path->addArc (CRect (CPoint (X, Y), arcsize), 180., 270., false);
-		path->closeSubpath();
+		path->addRoundRect (size, radius);
 	}
 	return path;
 }
